-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.0 Alpha
-
None
-
-
5893f103909ee0adc253f50adde841ba50582b29 (qt/qtbase/5.15)
Trying to build MuseScore using Qt 5.15.0 snapshot, and now alpha, under Windows using MSVC 2017 (haven't tried MinGW yet) gives lots of compiler errors like the following (sorry, some parts in German):
C:\Qt\5.15.0\msvc2017_64\include\QtCore/qmap.h(1213): error C2244: "QMultiMap<K,V>::insert": Keine Übereinstimmung für Funktionsdefinition mit vorhandener Deklaration gefunden [...\msvc.build_x64\audiofile\audiofile.vcxproj] C:\Qt\5.15.0\msvc2017_64\include\QtCore/qmap.h(1211): note: Siehe Deklaration von "QMultiMap<K,V>::insert" C:\Qt\5.15.0\msvc2017_64\include\QtCore/qmap.h(1213): note: Definition C:\Qt\5.15.0\msvc2017_64\include\QtCore/qmap.h(1213): note: 'QMultiMap<K,V>::iterator QMultiMap<K,V>::insert(const Key &,const T &)' C:\Qt\5.15.0\msvc2017_64\include\QtCore/qmap.h(1213): note: Vorhandene Deklarationen C:\Qt\5.15.0\msvc2017_64\include\QtCore/qmap.h(1213): note: 'QMap<K,V>::iterator QMultiMap<K,V>::insert(QMap<K,V>::const_iterator,const Key &,const T &)' C:\Qt\5.15.0\msvc2017_64\include\QtCore/qmap.h(1213): note: 'QMap<K,V>::iterator QMultiMap<K,V>::insert(const Key &,const T &)'
See also discussion in https://github.com/musescore/MuseScore/pull/5616#discussion_r378706502 ff.
Same code builds just fine using Qt 5.12.6 and 5.9.x
| For Gerrit Dashboard: QTBUG-82166 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 291057,5 | QMultiMap: Work around compiler problem in MSVC 2017 | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |